methods: renaming SyRi Syntheny analysis script

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@
 !Results/*_out.txt
 !Results/gene_fam*.png
 !Results/species_tree*.png
-!Results/syntheny.png
+!Results/syntheny*.png
 
 !README.md
